--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,32 @@ main {
 }
 
 
+.service-container{
+    max-width: 1000px;
+    width: 100%; /* Full width of the container */
+    background: #f9f9f9; /* White background for each section */
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+    margin: 0.5em 0em 0em 0em; /* Margin above and below each container */
+/*    padding: 2em 5em 1em 5em; */
+    padding: 2em 4em;
+    font-size: 0.9em;
+}
+
+.service-container h2 {
+    text-align: center;
+    padding-bottom: 1em;
+}
+.service-container ul {
+    column-count: 2; /* Split into 2 columns */
+    column-gap: 2em; /* Space between columns */
+    list-style-position: outside; /* Align bullet points with text */
+}
+
+.service-container li {
+    margin-bottom: 0.5em; /* Space between list items */
+}
+
 .news-container {
     max-width: 1000px;
     width: 100%;
@@ -150,6 +176,10 @@ strong {
     font-weight: bold; /* Makes text bold */
 }
   
+ul {
+     list-style-type: disc; 
+/*    padding-left: 1.5em;*/
+}
 
 ul li {
     margin-bottom: 6px; /* Adjust the value to set the spacing */
@@ -175,9 +205,11 @@ nav {
 }
 
 .name-header {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #ffffff; 
+    font-size: 1.5em;
+    font-weight: normal;
+    color: lightgrey;
+    font-family: monospace;
+    letter-spacing: 2px;
 }
 
 nav ul {
@@ -400,10 +432,10 @@ ol.journal-list {
 
 ol.journal-list li {
     counter-increment: journal-counter; /* Increment the counter */
-    margin-bottom: 15px; /* Increased space between list items */
-    line-height: 1.3; /* Improved readability */
+    margin-bottom: 1em; /* Increased space between list items */
+    line-height: 1.0; /* Improved readability */
 /*    padding-left: 20px;  Padding to create space for the counter */
-    font-size: 1.0em; /* Slightly larger font for better visibility */
+    font-size: 0.9em; /* Slightly larger font for better visibility */
     color: #333;  
 }
 
@@ -439,9 +471,9 @@ ol.conf-list {
 
 ol.conf-list li {
     counter-increment: conf-counter; /* Increment the counter */
-    margin-bottom: 15px; /* Space between list items */
-    line-height: 1.3; /* For readability */
-    font-size: 1.0em; /* Slightly larger font for better visibility */
+    margin-bottom: 1em; /* Space between list items */
+    line-height: 1.0; /* For readability */
+    font-size: 0.9em; /* Slightly larger font for better visibility */
     color: #333;  
 }
 
@@ -476,9 +508,9 @@ ol.book-list {
 
 ol.book-list li {
     counter-increment: book-counter; /* Increment the counter */
-    margin-bottom: 15px; /* Space between list items */
-    line-height: 1.3; /* For readability */
-    font-size: 1.0em; /* Slightly larger font for better visibility */
+    margin-bottom: 1em; /* Space between list items */
+    line-height: 1.0; /* For readability */
+    font-size: 0.9em; /* Slightly larger font for better visibility */
     color: #333;  
 }
 
@@ -739,7 +771,7 @@ Mobile Friendly   Mobile Friendly   Mobile Friendly
 
 @media (max-width: 768px) {
     .container {
-        padding: 1.5em 1em; /* Reduce padding on smaller screens */
+        padding: 1em; /* Reduce padding on smaller screens */
         margin: 0.5em 0; /* Adjust margins */
     }
 }
@@ -750,6 +782,27 @@ Mobile Friendly   Mobile Friendly   Mobile Friendly
     }
 }
 
+@media (max-width: 768px) {
+.service-container{
+    padding: 1em; 
+    font-size: 0.9em;
+}
+
+.service-container h2 {
+    text-align: left;
+/*    padding-bottom: 1em;*/
+}
+    
+.service-container ul {
+    column-count: 1; 
+/*    column-gap: 2em; */
+    list-style-position: outside; /* Align bullet points with text */
+}
+
+.service-container li {
+    margin-bottom: 0.1em; 
+}
+}
 
 
 
