--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ main {
 }
 
 .news-container p {
-    font-size: 16px; /* Adjust font size as needed */
+/*    font-size: 16px; */
     line-height: 1.5; /* Line height for readability */
     margin: 0.5em 0; /* Space above and below each news item */
     color: #333; /* Text color */
@@ -133,19 +133,20 @@ h3 {
 }
 
 a {
-    color: #007acc; /* A more vibrant blue for default links */
+    color: #333; /* #007acc; */
     text-decoration: none; /* Remove underline */
 /*    transition: color 0.3s ease, text-shadow 0.3s ease;  */
-    font-variant-caps:titling-caps;
-    text-decoration: underline; 
-    text-decoration-thickness: 1px; 
+    font-variant-caps: titling-caps;
+    text-decoration: underline dotted; 
+    text-decoration-thickness: 1.1px; 
     text-underline-offset: 3px; 
-    transition: text-decoration-style 0.3s ease, color 0.3s ease;
+/*    transition: text-decoration-style 0.3s ease, color 0.3s ease;*/
 }
 
 a:hover {
-    text-decoration-thickness: 2px; 
-/*    color: #0056b3; */
+    text-decoration-thickness: 1.5px; 
+    color: #007acc; 
+/*    color: darkblue;*/
 /*    text-decoration: underline;  */
 /*    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); */
 }
@@ -182,7 +183,7 @@ ul {
 }
 
 ul li {
-    margin-bottom: 6px; /* Adjust the value to set the spacing */
+    margin-bottom: 0.8em; /* Adjust the value to set the spacing */
 }
 
 
@@ -300,9 +301,9 @@ nav a.active {
 }
 
 .bio-info h2 {
-    font-size: 1.5em; /* Font size for the title */
+    font-size: 1.3em; /* Font size for the title */
     font-family:serif;
-    color: #555; /* Slightly lighter color for the title */
+    color: #555; 
     margin: 0.5em 0; /* Margin for spacing above and below */
     text-align: left;
     letter-spacing: 1px;
@@ -433,7 +434,7 @@ ol.journal-list {
 ol.journal-list li {
     counter-increment: journal-counter; /* Increment the counter */
     margin-bottom: 1em; /* Increased space between list items */
-    line-height: 1.0; /* Improved readability */
+    line-height: 1.3; /* Improved readability */
 /*    padding-left: 20px;  Padding to create space for the counter */
     font-size: 0.9em; /* Slightly larger font for better visibility */
     color: #333;  
@@ -448,14 +449,15 @@ ol.journal-list li::before {
 
 ol.journal-list a{
     font-weight: 400;
-    text-decoration: underline; 
+    text-decoration: underline dotted; 
     text-decoration-thickness: 1px; 
     text-underline-offset: 3px; 
     transition: text-decoration-style 0.3s ease, color 0.3s ease;
+    
 }
 
 ol.journal-list a:hover{
-    text-decoration-thickness: 2px; 
+    text-decoration-thickness: 1.5px; 
 }
 
 
@@ -472,7 +474,7 @@ ol.conf-list {
 ol.conf-list li {
     counter-increment: conf-counter; /* Increment the counter */
     margin-bottom: 1em; /* Space between list items */
-    line-height: 1.0; /* For readability */
+    line-height: 1.3; /* For readability */
     font-size: 0.9em; /* Slightly larger font for better visibility */
     color: #333;  
 }
@@ -487,14 +489,14 @@ ol.conf-list li::before {
 ol.conf-list a{
     font-weight: 400;
     font-variant-caps:titling-caps;
-    text-decoration: underline; 
+    text-decoration: underline dotted; 
     text-decoration-thickness: 1px; 
     text-underline-offset: 3px; 
     transition: text-decoration-style 0.3s ease, color 0.3s ease;
 }
 
 ol.conf-list a:hover{
-    text-decoration-thickness: 2px; 
+    text-decoration-thickness: 1.5px; 
 }
 
 
@@ -509,7 +511,7 @@ ol.book-list {
 ol.book-list li {
     counter-increment: book-counter; /* Increment the counter */
     margin-bottom: 1em; /* Space between list items */
-    line-height: 1.0; /* For readability */
+    line-height: 1.3; /* For readability */
     font-size: 0.9em; /* Slightly larger font for better visibility */
     color: #333;  
 }
@@ -524,14 +526,14 @@ ol.book-list li::before {
 ol.book-list a{
     font-weight: 400;
     font-variant-caps:titling-caps;
-    text-decoration: underline; 
+    text-decoration: underline dotted; 
     text-decoration-thickness: 1px; 
     text-underline-offset: 3px; 
     transition: text-decoration-style 0.3s ease, color 0.3s ease;
 }
 
 ol.book-list a:hover{
-    text-decoration-thickness: 2px; 
+    text-decoration-thickness: 1.5px; 
 }
 
 
@@ -570,7 +572,7 @@ ol.book-list a:hover{
 }
 
 .research-item p {
-    font-size: 1em;
+/*    font-size: 0.95em;*/
     line-height: 1.6;
 /*    color: #555; */
 }
@@ -756,12 +758,12 @@ Mobile Friendly   Mobile Friendly   Mobile Friendly
     }
 
     .bio-info h2 {
-        font-size: 1.2em; /* Reduce font size for title */
+        font-size: 1.3em; /* Reduce font size for title */
         text-align: center;
     }
 
     .bio-info p {
-        font-size: 0.9em; /* Smaller font size for paragraphs */
+        font-size: 0.95em; /* Smaller font size for paragraphs */
     }
 }
 
@@ -785,7 +787,7 @@ Mobile Friendly   Mobile Friendly   Mobile Friendly
 @media (max-width: 768px) {
 .service-container{
     padding: 1em; 
-    font-size: 0.9em;
+    font-size: 0.95em;
 }
 
 .service-container h2 {
@@ -818,7 +820,7 @@ Mobile Friendly   Mobile Friendly   Mobile Friendly
 
     .interest-item p {
         width: auto; /* Remove fixed width */
-        font-size: 0.9em; /* Reduce font size */
+        font-size: 1.1em; /* Reduce font size */
     }
 }
 
