--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     background-color: #f5f5f5; /* Soft background color */
     color: #333;
     font-weight: 200;
-    font-size: 0.95em;
+/*    font-size: 0.95em;*/
     line-height: 1.5;
     
 }
