--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ main {
 h1 {font-weight: 400; font-size: 2em; text-align: center;}
 h2 {color: #2c3e50; margin-bottom: 0.5em; text-align: center; font-weight: 400; font-size: 1.8em;  }
 h3 {color: #2c3e50;  margin: 0em; font-weight: 400;}
-a {color: #1772d0; text-decoration: none; }
+a {color: #1772d0; text-decoration: none; font-weight: 500;}
 a:hover {color: #f09228; }
 a:visited {}
 a:active {color: #e74c3c; }
