--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@ main {
     margin-top: 0em;
 }
 
-h1 {font-weight: 400; font-size: 2em; text-align: center;}
-h2 {color: #2c3e50; margin-bottom: 0.5em; text-align: center; font-weight: 400; font-size: 1.8em;  }
-h3 {color: #2c3e50;  margin: 0em; font-weight: 400;}
+h1 {font-weight: 400; font-size: 2em; text-align: center; text-shadow: 0 0 0.5px;}
+h2 {margin-bottom: 0.5em; text-align: center; font-weight: 400; font-size: 1.8em;  text-shadow: 0 0 0.5px;}
+h3 {margin: 0em; font-weight: 400; text-shadow: 0 0 0.5px;}
 a {color: #1772d0; text-decoration: none; font-weight: 500;}
 a:hover {color: #f09228; }
 a:visited {}
@@ -32,7 +32,7 @@ a:active {color: #e74c3c; }
 ul {list-style-type: disc; }
 ul li {}
 p{font-weight: 300; margin-bottom: 5px;}
-strong {font-weight: 400; } /* color: darkgoldenrod; */
+strong {font-weight: 400; text-shadow: 0 0 0.6px;} /* color: darkgoldenrod; */
 
 
 .container1 {
