--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ ul {list-style-type: disc; }
 ul li {}
 p{font-weight: 300; margin-bottom: 5px;}
 strong {font-weight: 400; text-shadow: 0 0 0.6px;} /* color: darkgoldenrod; */
-.highlight {background-color: #e3f2fd; margin-right: 5em;}
+.highlight {background-color: None; margin-right: 0em;}
 
 .container1 {
     max-width: 1000px;
@@ -337,6 +337,7 @@ Mobile Friendly   Mobile Friendly   Mobile Friendly
         font-size: 0.95em; /* Smaller font size for paragraphs */
     }
     
+.highlight {margin-right: 1em;}
     
 }
 
