--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,29 @@ footer {
 
 
 
+.video-container {
+    max-width: 1000px;
+    width: 100%;
+/*    background-color: #065895;*/
+    background-color: #053355;
+    padding: 2em 2em 1em 2em;
+    margin: 0em 0em 0.5em 0em;
+    display: flex;
+    gap: 1em;
+    flex-wrap: wrap;
+    justify-content: center;
+/*    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); */    
+}
+
+
+.video-container iframe {
+  width: 200px;
+  height: 150px;
+  border: none;
+}
+
+
+
 /*************************************************
 
 Mobile Friendly   Mobile Friendly   Mobile Friendly
