--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ ul {list-style-type: disc; }
 ul li {}
 p{font-weight: 300; margin-bottom: 5px;}
 strong {font-weight: 400; text-shadow: 0 0 0.6px;} /* color: darkgoldenrod; */
-.highlight {background-color: None; margin-right: 0em;}
+.highlight {color:white; background-color: #007acc; margin-right: 0em;}
 important {font-weight: 400; text-shadow: 0 0 0.6px; color: firebrick;}
 .container1 {
     max-width: 1000px;
